# daedalus-virtualizer

./: .gitignore  Dockerfile  LICENSE  LICENSE-3RD-PARTY  README.md  capstone.code-workspace
daedalus-cpu/: pyproject.toml
daedalus-cpu/src/daedaluscpu/: common.py  enclave.py  evalplatform.py  gen.py  synthesis.py  test.py
daedalus-cpu/src/daedaluscpu/data/test_cases/: runtime.json  tea_algo_verification.c  test_adjecent_strings.c  test_afterwards_declaration.c  test_anonymous_struct_field_initialization.c  test_anonymous_union_member.c  test_array.c  test_array_index_pointer.c  test_array_of_strings.c  test_assignment_operators.c  test_break.c  test_case.c  test_comma_operator.c  test_compound_literal.c  test_conditionals.c  test_continue.c  test_control_structures.c  test_enum.c  test_enum_implicit_cast.c  test_expressions.c  test_extern_after_static.c  test_fast_tea.c  test_fnv.c  test_for_statement.c  test_for_statement_scope.c  test_forward_declaration.c  test_function_argument_name.c  test_function_arguments.c  test_general_1.c  test_general_2.c  test_general_4.c  test_general_5.c  test_global_compound_literal.c  test_goto.c  test_hello_world.c  test_initialization.c  test_inline_asm_exec.c  test_literal_data.c  test_not_all_paths_return_value.c  test_offset.c  (+13 more)
daedalus-cpu/src/daedaluscpu/data/test_fail_compile/: test_bad_bitfield_type.c  test_duplicate_case_range.c  test_duplicate_case_value.c  test_duplicate_default.c  test_function_double_definition.c  test_incomplete_struct.c  test_loose_case.c  (+8 more)
templates/ebpf/toolchain/compiler/: Makefile  pyproject.toml
(+117 files in other folders)
