[project]
name = "daedalus-cpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questionary==2.1.1", "pyyaml", "python-slugify", "rich", "pexpect", "jinja2", "python-constraint2", "pydantic", "platformdirs"
]

[project.scripts]
dacpu-init = "daedaluscpu.gen:main"
dacpu-test = "daedaluscpu.test:main"
dacpu-eval-platform = "daedaluscpu.evalplatform:main"
dacpu-pty = "daedaluscpu.enclave:main"


[tool.setuptools.package-data]
daedalus_tests = ["data/test_cases/*"]
daedalus_test_support = ["data/test_support/*"]
